fixed header mobile-view
was broken as everything could not fit within the viewport

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,27 +1,18 @@
 #header {
-  display: flex;
   background-color: rgba(50, 50, 50, 0.95);
   color: white;
   width: 100%;
-  height: 50vh;
+  height: 47vh;
   margin: auto;
   border-bottom: 4px solid white;
   position: relative; }
-  #header #header-me {
-    padding-left: 15px;
-    padding-bottom: 15px;
-    width: 50%; }
-  #header #header-links {
-    padding-right: 15px;
-    padding-bottom: 15px;
-    width: 50%;
-    text-align: right; }
   #header .header-name {
     font-size: 32px;
-    line-height: 1.2em; }
+    line-height: 1.2em;
+    padding-bottom: 10px; }
   #header img {
     position: absolute;
-    top: calc(50vh - 100px);
+    top: calc(47vh - 100px);
     left: calc(50vw - 100px);
     width: 200px;
     height: 200px;
@@ -34,6 +25,7 @@
     border: 4px solid white;
     padding: 0px; }
   #header p {
+    padding-top: 5px;
     margin-bottom: 0px;
     margin-top: 0px; }
   #header a {
@@ -43,21 +35,38 @@
   #header a:hover {
     color: #005E91; }
 
-@media only screen and (max-width: 690px) {
-  #header p {
-    font-size: 18px; }
+@media only screen and (max-width: 736px) {
+  #header {
+    height: 75vh; }
+    #header p {
+      font-size: 18px; }
+    #header img {
+      top: calc(75vh - 100px);
+      left: calc(50vw - 100px); }
 
   #header-me {
-    margin-top: 50px; }
+    padding-top: 80px;
+    text-align: center; }
 
   #header-links {
-    margin-top: 50px; } }
-@media only screen and (min-width: 691px) {
+    padding-top: 40px;
+    text-align: center; } }
+@media only screen and (min-width: 737px) {
   .header-name {
     font-size: 40px !important; }
 
   #header {
+    display: flex;
     align-items: flex-end; }
+    #header #header-me {
+      padding-left: 15px;
+      padding-bottom: 15px;
+      width: 50%; }
+    #header #header-links {
+      padding-right: 15px;
+      padding-bottom: 15px;
+      width: 50%;
+      text-align: right; }
 
   #header p {
     font-size: 20px; } }
@@ -80,11 +89,19 @@
     padding: 10px 10px 10px 10px; }
   .menu a {
     color: #cfc7c7; }
-  .menu .menu-item:hover {
-    background-color: white; }
+  .menu #menu-about:hover {
+    background-color: #086788; }
+  .menu #menu-process:hover {
+    background-color: #d93b9d; }
+  .menu #menu-skills:hover {
+    background-color: #6ba753; }
+  .menu #menu-work:hover {
+    background-color: #E06C9F; }
+  .menu #menu-contact:hover {
+    background-color: #1ba4de; }
   .menu a:hover {
-    color: black;
-    text-decoration: none; }
+    text-decoration: none;
+    color: white; }
 
 @media only screen and (min-width: 737px) {
   .menu p {
@@ -97,7 +114,7 @@
   width: 100%;
   margin: auto;
   color: white;
-  margin-top: 140px;
+  margin-top: 130px;
   margin-bottom: 120px; }
   #inspiration p {
     padding: 5px 140px 5px 140px;
@@ -134,41 +151,44 @@
   0%, 20%, 50%, 80%, 100% {
     -webkit-transform: translateY(0); }
   40% {
-    -webkit-transform: translateY(-30px); }
+    -webkit-transform: translateY(-25px); }
   60% {
     -webkit-transform: translateY(-15px); } }
 @-moz-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     -moz-transform: translateY(0); }
   40% {
-    -moz-transform: translateY(-30px); }
+    -moz-transform: translateY(-25px); }
   60% {
     -moz-transform: translateY(-15px); } }
 @-o-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     -o-transform: translateY(0); }
   40% {
-    -o-transform: translateY(-30px); }
+    -o-transform: translateY(-25px); }
   60% {
     -o-transform: translateY(-15px); } }
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0); }
   40% {
-    transform: translateY(-30px); }
+    transform: translateY(-25px); }
   60% {
     transform: translateY(-15px); } }
-@media only screen and (max-width: 634px) {
+@media only screen and (max-width: 736px) {
+  .bounce {
+    display: none; }
+
   #inspiration {
-    margin-top: 120px;
-    margin-bottom: 120px; }
+    margin-top: 130px;
+    margin-bottom: 80px; }
     #inspiration p {
       padding: 0px 2em 10px 2em;
       margin-bottom: 0px; }
     #inspiration h2 {
       padding: 0em 2em 0em 2em;
       margin-top: 0px; } }
-@media only screen and (min-width: 635px) {
+@media only screen and (min-width: 737px) {
   #inspiration p {
     font-size: 20px; } }
 #content-container {
